--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,166 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  box-sizing: border-box;
+  font-size: 13px;
+  font-weight: 400;
+  text-decoration: none;
+  list-style: none;
+  font-family: 'Inter', sans-serif;
+  transition: all 0.5s ease-in-out;
+  animation: opening 0.5s ease;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
+@keyframes opening {
   from {
-    transform: rotate(0deg);
+    opacity: 0;
   }
+
   to {
-    transform: rotate(360deg);
+    opacity: 1;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.05);
+  }
+
+  100% {
+    transform: scale(1);
   }
 }
 
-.card {
-  padding: 2em;
+#root {
+  width: 100%;
+  min-height: 100vh;
 }
 
-.read-the-docs {
-  color: #888;
+body {
+  padding: 0;
+  margin: 0;
+  /* background-color: black; */
+  text-align: center;
+  width: 100%;
+}
+
+h1 {
+  font-size: 56px;
+  font-weight: 900;
+}
+
+h2 {
+  font-size: 46px;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 36px;
+  font-weight: 600;
+}
+
+h4 {
+  font-size: 26px;
+  font-weight: 600;
+}
+
+h5 {
+  font-size: 22px;
+  font-weight: 500;
+}
+
+h6 {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+p {
+  color: rgb(46, 45, 45);
+}
+
+a.nav-link {
+  font-size: 14px;
+  font-weight: 500;
+  transition: all .5s ease-in;
+  color: rgb(103, 103, 104);
+}
+
+a.nav-link:hover {
+  border-bottom: 2px solid darkorchid;
+  color: darkorchid;
+  transform: translateY(-5px);
+  font-weight: 600;
+  animation: pulse 2s infinite;
+}
+.hero-button{
+  border-radius: 25px;
+  border: 2px solid rgb(2, 2, 2);
+  color: black;
+  padding: 10px 0;
+}
+.hero-button:hover{
+  background-color: black;
+  color: white;
+  transform: rotateZ(-5deg);
+}
+.captive-box{
+  border: 0;
+  
+}
+@media screen and (max-width:786px) {
+  h1 {
+    font-size: 36px;
+    font-weight: 900;
+  }
+
+  h2 {
+    font-size: 26px;
+    font-weight: 700;
+  }
+
+  h3 {
+    font-size: 22px;
+    font-weight: 600;
+  }
+
+  h4 {
+    font-size: 20px;
+    font-weight: 600;
+  }
+
+  h5 {
+    font-size: 18px;
+    font-weight: 500;
+  }
+
+  h6 {
+    font-size: 16px;
+    font-weight: 500;
+  }
+
+  a.nav-link {
+    font-size: 14px;
+    margin: 10px;
+    font-weight: 500;
+    transition: all .5s ease-in;
+  }
+
+  a.btn-link {
+    margin: 10px;
+  }
+
+  a.nav-link:hover {
+    background-color: black;
+    color: white;
+    transform: translateY(-5px);
+    font-weight: 600;
+    animation: pulse 2s infinite;
+  }
+}
+
+.hero-text {
+  font-size: 16px;
+  font-weight: 300;
 }
