--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root{
+  --bg-primary: linear-gradient(to bottom, #9932cc,rgb(202, 128, 240));
+}
 * {
   box-sizing: border-box;
   font-size: 13px;
   font-weight: 400;
   text-decoration: none;
   list-style: none;
-  font-family: 'Inter', sans-serif;
-  transition: all 0.5s ease-in-out;
+  font-family: 'Poppins', sans-serif;
+  transition: all 0.5s;
   animation: opening 0.5s ease;
 }
 
@@ -50,7 +55,14 @@ h1 {
   font-size: 56px;
   font-weight: 900;
 }
-
+.text-gradient{
+  background: var(--bg-primary);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-size: 56px;
+  font-weight: 900;
+}
 h2 {
   font-size: 46px;
   font-weight: 700;
@@ -63,7 +75,7 @@ h3 {
 
 h4 {
   font-size: 26px;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 h5 {
@@ -107,7 +119,38 @@ a.nav-link:hover {
 }
 .captive-box{
   border: 0;
-  
+  padding: 10px;
+  border-radius: 25px;
+  transition: ease-in .3s;
+}
+.captive-box i{
+  font-size: 56px;
+  background: var(--bg-primary);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.captive-box h4{
+  text-wrap: nowrap;
+}
+.captive-box.first, .captive-box:hover{
+  box-shadow: 0 0 10px 8px rgba(94, 1, 141, 0.08);
+  border: 2px solid rgba(94, 1, 141, 0.8);
+  transform: scaleY(1.02);
+  animation: altern 3s ease-in-out infinite;
+}
+.testimoniale{
+  background: var(--bg-primary);
+  min-height: 100vh;
+}
+@keyframes altern {
+  0%{
+    transform: translateY(-20px);
+  }50%{
+    transform: translateY(20px);
+  }100%{
+    transform: translateY(-20px);
+  }
 }
 @media screen and (max-width:786px) {
   h1 {
