--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-:root{
-  --bg-primary: linear-gradient(to bottom, #9932cc,rgb(202, 128, 240));
+:root {
+  --bg-primary: linear-gradient(to bottom, #9932cc, rgb(202, 128, 240));
+  --bg-secondary: radial-gradient(circle at center, whitesmoke 60%, rgba(63, 4, 75, 0.24) 100%);
+  --primary: rgb(202, 128, 240);
+  --secondary: #9932cc;
 }
+
 * {
   box-sizing: border-box;
   font-size: 13px;
@@ -55,7 +59,8 @@ h1 {
   font-size: 56px;
   font-weight: 900;
 }
-.text-gradient{
+
+.text-gradient {
   background: var(--bg-primary);
   -webkit-background-clip: text;
   background-clip: text;
@@ -63,6 +68,16 @@ h1 {
   font-size: 56px;
   font-weight: 900;
 }
+
+.text-gradient2 {
+  background: var(--bg-secondary);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-size: 56px;
+  font-weight: 900;
+}
+
 h2 {
   font-size: 46px;
   font-weight: 700;
@@ -106,54 +121,178 @@ a.nav-link:hover {
   font-weight: 600;
   animation: pulse 2s infinite;
 }
-.hero-button{
+
+.hero-button {
   border-radius: 25px;
   border: 2px solid rgb(2, 2, 2);
   color: black;
   padding: 10px 0;
 }
-.hero-button:hover{
+
+.hero-button:hover {
   background-color: black;
   color: white;
   transform: rotateZ(-5deg);
 }
-.captive-box{
+
+.captive-box {
   border: 0;
   padding: 10px;
   border-radius: 25px;
   transition: ease-in .3s;
+  margin-bottom: 15px;
 }
-.captive-box i{
+
+.captive-box i {
   font-size: 56px;
   background: var(--bg-primary);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
 }
-.captive-box h4{
+
+.captive-box h4 {
   text-wrap: nowrap;
 }
-.captive-box.first, .captive-box:hover{
+
+.captive-box.first,
+.captive-box:hover {
   box-shadow: 0 0 10px 8px rgba(94, 1, 141, 0.08);
   border: 2px solid rgba(94, 1, 141, 0.8);
   transform: scaleY(1.02);
   animation: altern 3s ease-in-out infinite;
 }
-.testimoniale{
+
+.testimoniale {
   background: var(--bg-primary);
   min-height: 100vh;
+  padding: 0 20px 0 20px;
+}
+
+.testimoniale .modeles {
+  min-height: 80vh;
+  display: flex;
+  align-items: center;
+  padding-top: 100px;
+}
+
+.carousel-button-control {
+  width: 100px;
+  position: relative;
+  position: absolute;
+  top: 0;
+  right: .5%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.carousel-button-control button {
+  font-size: 16px;
+  padding: 20px;
+}
+
+#myCarousel {
+  min-height: 800px;
+  width: 100%;
+}
+
+#myCarousel .carousel-item .card {
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 300px;
+  border-radius: 3px;
+  transition: ease-in-out .4s;
+  background-image: var(--bg-secondary);
+  position: relative;
+}
+
+#myCarousel .carousel-item .card img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  object-position: 100%;
+}
+
+#myCarousel .carousel-item .card:hover {
+  box-shadow: 0 0 15px 15px rgba(10, 9, 10, 0.1);
+  transform: scale(1.02);
+  border: 2px solid #9932cc;
+  background: whitesmoke;
+  cursor: pointer;
+}
+
+#myCarousel .carousel-item {
+  margin-top: 50px;
+  margin-bottom: 100px;
+  padding: 10px;
+}
+
+#myCarousel .carousel-caption {
+  bottom: -30%;
+}
+#myCarouselTestimonie .carousel-inner .carousel-item .card{
+  position: relative;
+  border: none;
+}
+#myCarouselTestimonie .carousel-inner .carousel-item .card img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 12px;
+}
+.msg{
+  background-image: var(--bg-primary);
+  border-radius: 10px;
+  position: relative;
+  z-index: 2;
+  color: white;
+  font-size: 16px;
+  isolation: isolate;
+}
+.msg::before{
+  content: '';
+  width: 25px;
+  height: 25px;
+  transform: rotateZ(45deg);
+  background: var(--primary);
+  position: absolute;
+  left: 5%;
+  bottom: -5%;
+  z-index: 1;
+  opacity: .6;
+}
+#myCarouselTestimonie .carousel-inner .carousel-item .card .title{
+  text-align: start;
 }
 @keyframes altern {
-  0%{
+  0% {
     transform: translateY(-20px);
-  }50%{
+  }
+
+  50% {
     transform: translateY(20px);
-  }100%{
+  }
+
+  100% {
     transform: translateY(-20px);
   }
 }
+
 @media screen and (max-width:786px) {
   h1 {
+    font-size: 36px;
+    font-weight: 900;
+  }
+
+  .text-gradient {
+    background: var(--bg-primary);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
     font-size: 36px;
     font-weight: 900;
   }
@@ -201,6 +340,19 @@ a.nav-link:hover {
     font-weight: 600;
     animation: pulse 2s infinite;
   }
+
+  #myCarousel .carousel-item .card {
+    height: 200px;
+  }
+
+  #myCarouselTestimonie .carousel-inner .carousel-item>div {
+    display: none;
+  }
+
+  #myCarouselTestimonie .carousel-inner .carousel-item>div:first-child {
+    display: block;
+  }
+
 }
 
 .hero-text {
