--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-  --bg-primary: linear-gradient(to bottom, #9932cc, rgb(202, 128, 240));
-  --bg-secondary: radial-gradient(circle at center, whitesmoke 60%, rgba(63, 4, 75, 0.24) 100%);
-  --primary: rgb(202, 128, 240);
-  --secondary: #9932cc;
+  --bg-primary: linear-gradient(to bottom, #3e0366, rgb(180, 128, 240));
+  --bg-secondary: radial-gradient(circle at center 80%, whitesmoke 60%, rgba(208, 206, 209, 0.493) 100%);
+  --primary: rgb(180, 128, 240);
+  --secondary: #6832cc;
 }
 
 * {
@@ -55,6 +55,20 @@ body {
   width: 100%;
 }
 
+section {
+  min-height: 100vh;
+  position: relative;
+  /* opacity: 0.8;
+    transition: opacity 1s ease, transform 1s ease;
+    transform: translateY(10px);
+    overflow: hidden; */
+}
+
+section.active {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 h1 {
   font-size: 56px;
   font-weight: 900;
@@ -76,6 +90,11 @@ h1 {
   color: transparent;
   font-size: 56px;
   font-weight: 900;
+}
+
+footer {
+  background-image: var(--bg-primary);
+  padding: 20px;
 }
 
 h2 {
@@ -107,29 +126,26 @@ p {
   color: rgb(46, 45, 45);
 }
 
-a.nav-link {
-  font-size: 14px;
-  font-weight: 500;
-  transition: all .5s ease-in;
-  color: rgb(103, 103, 104);
-}
-
-a.nav-link:hover {
-  border-bottom: 2px solid darkorchid;
-  color: darkorchid;
-  transform: translateY(-5px);
-  font-weight: 600;
-  animation: pulse 2s infinite;
-}
-
 .hero-button {
   border-radius: 25px;
   border: 2px solid rgb(2, 2, 2);
   color: black;
-  padding: 10px 0;
+  padding: 10px 20px;
+  text-wrap: nowrap;
 }
 
-.hero-button:hover {
+.hero-button2 {
+  background: var(--bg-primary);
+  border-radius: 25px;
+  color: rgb(255, 253, 253);
+  padding: 10px 20px;
+  margin-right: 5px;
+  text-wrap: nowrap;
+  border: 0;
+}
+
+.hero-button:hover,
+.hero-button2:hover {
   background-color: black;
   color: white;
   transform: rotateZ(-5deg);
@@ -229,18 +245,22 @@ a.nav-link:hover {
 
 #myCarousel .carousel-caption {
   bottom: -30%;
+  z-index: 2;
 }
-#myCarouselTestimonie .carousel-inner .carousel-item .card{
+
+#myCarouselTestimonie .carousel-inner .carousel-item .card {
   position: relative;
   border: none;
 }
-#myCarouselTestimonie .carousel-inner .carousel-item .card img{
+
+#myCarouselTestimonie .carousel-inner .carousel-item .card img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
   margin-right: 12px;
 }
-.msg{
+
+.msg {
   background-image: var(--bg-primary);
   border-radius: 10px;
   position: relative;
@@ -249,21 +269,24 @@ a.nav-link:hover {
   font-size: 16px;
   isolation: isolate;
 }
-.msg::before{
+
+.msg::before {
   content: '';
   width: 25px;
   height: 25px;
   transform: rotateZ(45deg);
   background: var(--primary);
   position: absolute;
-  left: 5%;
-  bottom: -5%;
+  left: 6%;
+  bottom: -3%;
   z-index: 1;
   opacity: .6;
 }
-#myCarouselTestimonie .carousel-inner .carousel-item .card .title{
+
+#myCarouselTestimonie .carousel-inner .carousel-item .card .title {
   text-align: start;
 }
+
 @keyframes altern {
   0% {
     transform: translateY(-20px);
@@ -278,7 +301,17 @@ a.nav-link:hover {
   }
 }
 
+.hero-text {
+  font-size: 16px;
+  font-weight: 300;
+}
+
 @media screen and (max-width:786px) {
+  * {
+    font-size: 12px;
+    font-weight: 300;
+  }
+
   h1 {
     font-size: 36px;
     font-weight: 900;
@@ -349,9 +382,4 @@ a.nav-link:hover {
     display: block;
   }
 
-}
-
-.hero-text {
-  font-size: 16px;
-  font-weight: 300;
 }
